--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mapsplugin/cordova-plugin-googlemaps.git"
+    "url": "https://github.com/GEMSEDU/cordova-plugin-googlemaps.git"
   },
   "keywords": [
     "google",
@@ -48,12 +48,12 @@
     "test:watch": "jest --watch",
     "eslint": "node node_modules/eslint/bin/eslint www src"
   },
-  "author": "Masashi Katsumata, Hirbod Mirjavadi",
+  "author": "",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/mapsplugin/cordova-plugin-googlemaps/issues"
+    "url": "https://github.com/GEMSEDU/cordova-plugin-googlemaps/issues"
   },
-  "homepage": "https://github.com/mapsplugin/cordova-plugin-googlemaps",
+  "homepage": "https://github.com/GEMSEDU/cordova-plugin-googlemaps",
   "devDependencies": {
     "cordova-js": "^4.2.4",
     "eslint": "^5.7.0",
