--- a/plugin.xml
+++ b/plugin.xml
@@ -137,7 +137,7 @@
   </engines>
   
 	<preference name="GOOGLE_MAPS_IOS_API_KEY" default="" />
-  <preference name="GOOGLE_MAPS_ANDROID_API_KEY" value=""/>
+  <preference name="GOOGLE_MAPS_ANDROID_API_KEY" default=""/>
   <!-- android -->
   <platform name="android">
     <info>
